salesforce_sfdx/main/default/objects/OSFMX_ContractAccountForBilling__c/OSFMX_ContractAccountForBilling__c.object-meta.xml
<CustomObject>
    <description>Almacena temporalmente cabeceras de la consulta de facturación hacía Denodo y Global Hitss, para mostrar en la vista 360. Debe ser borrada cada noche.</description>
    <label>Cuenta Contrato Para Facturacion</label>
    <nameField>
        <label>Business Partner</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cuentas Contrato Para Facturacion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>