salesforce_sfdx/main/default/objects/OSFMX_ContractAccountForBilling__c/fields/OSFMX_CuentaContrato__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CuentaContrato__c</fullName>
    <externalId>true</externalId>
    <label>Cuenta Contrato</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>