salesforce_sfdx/main/default/objects/OSFMX_ContractAccountForBilling__c/fields/OSFMX_Sociedad__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Sociedad__c</fullName>
    <label>Sociedad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>