salesforce_sfdx/main/default/objects/OSFMX_ContractAccountForBilling__c/fields/OSMX_SaldoCliente__c.field-meta.xml
<CustomField>
    <fullName>OSMX_SaldoCliente__c</fullName>
    <label>Saldo Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>