salesforce_sfdx/main/default/objects/OSFMX_ContractAccountForBilling__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OSFMX_CuentaContrato__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OSMX_SaldoCliente__c</columns>
    <columns>OSFMX_Sociedad__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>